<resources>
    <string name="app_name">Plant Lovers Assistant</string>
    <string name="edit_bt">EditProfile</string>
    <string name="notify_bt">Notifications</string>
    <string name="logout_bt">Logout</string>
    <string name="plant">plant1</string>
    <string name="icon1">icon</string>
    <string name="r_tv">Take a look at your balcony</string>
    <string name="intro">Peek in your balcony</string>
    <string name="temp">Temperature</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="camera_bt">SetThreshold</string>
    <string name="gallery_bt">GALLERY</string>
</resources>
