<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/app_name"
    android:orientation="vertical"

    tools:context=".Main1Activity">


    <ListView
        android:id="@+id/simpleListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="false"></ListView>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="400dp"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="10dp"
            android:layout_width="10dp"></TextView>

        <Button
            android:background="@color/ButtonColor"
            android:id="@+id/editProfile_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/edit_bt" />

        <Button
            android:background="@color/ButtonColor"
            android:id="@+id/notification_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/notify_bt" />

        <Button
            android:background="@color/ButtonColor"
            android:id="@+id/logout_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/logout_bt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="10dp"
            android:layout_width="10dp"></TextView>


        <Button
            android:background="@color/ButtonDarkColor"
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="30dp"
            android:layout_marginEnd="10dp"
            android:text="Back" />

        <Button
            android:background="@color/ButtonDarkColor"
            android:id="@+id/profile_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="Profile" />

        <Button
            android:background="@color/ButtonDarkColor"
            android:id="@+id/settings_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="Settings" />
    </LinearLayout>

</LinearLayout>

</RelativeLayout>






