<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckWeather">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="651dp"
        android:text="Check Weather"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/webViewId"
        android:layout_width="322dp"
        android:layout_height="402dp"

        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="209dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25"></WebView>

    <Button
        android:id="@+id/setAlarm_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="123dp"
        android:background="@color/ButtonLightBlueColor"
        android:text="Set Alarm for Moving System in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webViewId" />

    <Button
        android:id="@+id/back_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="21dp"
        android:background="@color/ButtonBlueColor"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webViewId" />

    <Button
        android:id="@+id/profile_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="21dp"
        android:background="@color/ButtonBlueColor"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_bt"
        app:layout_constraintTop_toBottomOf="@+id/setAlarm_bt" />

    <Button
        android:id="@+id/home_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="21dp"
        android:background="@color/ButtonBlueColor"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_bt"
        app:layout_constraintTop_toBottomOf="@+id/webViewId" />

</androidx.constraintlayout.widget.ConstraintLayout>